--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
-<%provide(:title, "Home") %>
+
 <div class= "jumbotron">
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Professional Advice Now</h1>
+<p>Find a topic and offer or receive advice This site is under construction</p>
 </div>
