finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,4 +2,9 @@
 <div class= "jumbotron">
 <h1>Professional Advice Now</h1>
 <p>Find a topic and offer or receive advice This site is under construction</p>
+<hr class="my-4">
+<%=link_to 'Join', join_path, class: "btn btn-lg btn-primary"%>
+
 </div>
+
+<%=link_to (image_tag("kitten.jpg", alt: "Kitten", size: "100x50")), root_path%> 
