--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,20 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <%=render 'layouts/shim'%>
 
+  </head>
   <body>
-    <%= yield %>
+	  
+	<%=render 'layouts/header'%>
+	
+	<div class='container'>
+		<%flash.each do |name, msg|%>
+	       		<%=content_tag(:div, msg, class: "alert alert-info")%>
+		<%end%>
+	  <%= yield %>
+	  
+	 </div>
   </body>
+
 </html>
