--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,8 @@
                           <li><%= link_to "About", about_path %></li>
 			  <li><%= link_to "Help", help_path %></li>
 			  <li><%= link_to "Contact", contact_path%></li>
-                          <li><%= link_to "Login", '#' %></li>
+			  <li><%= link_to "Login", '#' %></li>
+			  <li><%= link_to "Join", join_path%></li>
                   </ul>
                 </nav>
         </div>
