Make a basic User model (including secure passwords)

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,6 @@
 
 <%provide(:title, "About")%>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="jumbotron">
+<h1>About</h1>
+<p>ProNow is a site currently under construction</p>
+</div>
